--- a/query.ipynb
+++ b/query.ipynb
@@ -69,21 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'L' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19152/810479927.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[1;31m# Suppose P is the query pattern\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[0mP\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"aga\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 61\u001b[1;33m \u001b[0mwgi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWheelerGraphIndex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mO\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     62\u001b[0m \u001b[0mlow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhigh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwgi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mP\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mlow\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'L' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# class WheelerGraphIndex:\n",
     "#     def __init__(self, L, I, O, C, wt):\n",
@@ -156,23 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 22] Invalid argument: 'wheeler\\\\out__rowboat\\nodes.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2096/2340163370.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    132\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    133\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"__main__\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 134\u001b[1;33m     \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2096/2340163370.py\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    116\u001b[0m     \u001b[0mI_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_bitvector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mI_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m     \u001b[0mO_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_bitvector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mO_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 118\u001b[1;33m     \u001b[0mnodes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_nodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnodes_file\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# if needed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    119\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    120\u001b[0m     \u001b[1;31m# Construct the WheelerGraphIndex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2096/2340163370.py\u001b[0m in \u001b[0;36mload_nodes\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;31m# Assume nodes file might contain one node per line or a mapping of edges -> node\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[1;31m# This will depend on your format. Let's assume a simple format: each line gives a node id for the corresponding edge index.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mnodes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnodes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 22] Invalid argument: 'wheeler\\\\out__rowboat\\nodes.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -200,8 +174,15 @@
     "    # This will depend on your format. Let's assume a simple format: each line gives a node id for the corresponding edge index.\n",
     "    with open(filename, 'r') as f:\n",
     "        nodes = [line.strip() for line in f]\n",
-    "    return nodes\n",
-    "\n",
+    "    return nodes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class RankSupport:\n",
     "    \"\"\" A naive rank support example. For large data, implement something more efficient or use a wavelet tree. \"\"\"\n",
     "    def __init__(self, text):\n",
@@ -226,7 +207,15 @@
     "            return 0\n",
     "        # prefix_counts[c][pos+1] because prefix_counts is 1-based indexing in this approach\n",
     "        return self.prefix_counts[c][pos+1]\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class WheelerGraphIndex:\n",
     "    def __init__(self, L, I, O):\n",
     "        self.L = L\n",
@@ -279,13 +268,29 @@
     "        # Here you would use I and O bitvectors (and nodes) to recover paths\n",
     "        # For now, just return the edge indices\n",
     "        return list(range(low, high+1))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches of 'w': edges [15, 16]\n"
+     ]
+    }
+   ],
+   "source": [
     "def main():\n",
     "    # Adjust filenames as needed\n",
     "    L_file = \"wheeler\\out__rowboat\\L.txt\"       # contains the edge labels in order\n",
     "    I_file = \"wheeler\\out__rowboat\\I.txt\"       # bitvector of incoming edges\n",
     "    O_file = \"wheeler\\out__rowboat\\O.txt\"       # bitvector of outgoing edges\n",
-    "    nodes_file = \"wheeler\\out__rowboat\\nodes.txt\" # node data (optional depending on use case)\n",
+    "    nodes_file = r\"wheeler\\out__rowboat\\nodes.txt\"# node data (optional depending on use case)\n",
     "\n",
     "    # Load data\n",
     "    L_str = load_L(L_file)\n",
@@ -297,7 +302,7 @@
     "    wgi = WheelerGraphIndex(L_str, I_str, O_str)\n",
     "\n",
     "    # Example query\n",
-    "    P = \"aga\"  # or any pattern you want to search\n",
+    "    P = \"w\"  # or any pattern you want to search\n",
     "    low, high = wgi.backward_search(P)\n",
     "\n",
     "    if low == -1:\n",
@@ -307,7 +312,7 @@
     "        print(f\"Matches of '{P}': edges {match_edges}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
