--- a/QueryWheeler.ipynb
+++ b/QueryWheeler.ipynb
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "9090ee35",
+   "execution_count": 241,
+   "id": "d09107d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        self.O = O\n",
     "        self.n = len(L)\n",
     "        self.F = \"\".join(sorted(L))\n",
-    "        print(self.F)\n",
+    "#         print(self.F)\n",
     "        \n",
     "        \n",
     "        # Build C array (like first in FM-index)\n",
@@ -62,17 +62,17 @@
     "            if string[i] != string[i - 1]:\n",
     "                indices.append(i)\n",
     "        self.C = dict(zip(sorted(set(L)),indices))\n",
-    "        print(self.C)\n",
+    "#         print(self.C)\n",
     "        for i, key in enumerate(self.C.keys()):\n",
-    "            if i == 3:\n",
+    "            if i == len(self.C) -1:\n",
     "                self.C[key] = [self.C[key]]\n",
-    "                self.C[key].append(len(L))\n",
+    "                self.C[key].append(len(L) -1)\n",
     "            else:\n",
     "                self.C[key] = [self.C[key]]\n",
     "                self.C[key].append(indices[i + 1] -1)\n",
     "            \n",
     "        \n",
-    "        print(self.C)\n",
+    "#         print(self.C)\n",
     "        \n",
     "        \n",
     "        def zeros_ones_helper(string): \n",
@@ -89,10 +89,10 @@
     "        self.I_zeros, self.I_ones = zeros_ones_helper(self.I)\n",
     "        self.O_zeros, self.O_ones = zeros_ones_helper(self.O)\n",
     "        \n",
-    "        print(self.I_zeros)\n",
-    "        print(self.I_ones)\n",
-    "        print(self.O_zeros)\n",
-    "        print(self.O_ones)\n",
+    "#         print(self.I_zeros)\n",
+    "#         print(self.I_ones)\n",
+    "#         print(self.O_zeros)\n",
+    "#         print(self.O_ones)\n",
     "        \n",
     "    def i_select_0(self, low, high):\n",
     "        # Get positions of 0's corresponding to the characters in F\n",
@@ -153,21 +153,30 @@
     "            elif len(indices) > 1:\n",
     "                start, stop = self.C[c][0] + indices[0], self.C[c][0] + indices[-1]\n",
     "                \n",
-    "            print(start,stop)\n",
+    "#             print(start,stop)\n",
     "\n",
-    "            low, high = self.i_select_0(start,stop)\n",
-    "            print(low, high)\n",
-    "            I_start, I_stop = self.i_rank_1(low,high)\n",
-    "            print(I_start, I_stop)\n",
-    "            low,high = self.o_select_1(I_start -1, I_stop)\n",
-    "            print(low, high)\n",
-    "            O_start, O_stop = self.o_rank_0(low, high)\n",
+    "            I_low, I_high = self.i_select_0(start,stop)\n",
+    "#             print(I_low, I_high)\n",
+    "            I_start, I_stop = self.i_rank_1(I_low,I_high)\n",
+    "#             print(I_start, I_stop)\n",
+    "            if I_start > 0:\n",
+    "                O_low,O_high = self.o_select_1(I_start -1, I_stop)\n",
+    "            else: \n",
+    "                print(\"error\")\n",
+    "                O_low,O_high = self.o_select_1(0, I_stop)\n",
+    "            print(O_low, O_high)\n",
+    "            O_start, O_stop = self.o_rank_0(O_low, O_high)\n",
     "            print(O_start, O_stop)\n",
     "\n",
     "            if i > 0:\n",
     "                if O_stop == -1:\n",
     "                    O_stop = O_start\n",
+    "                print(P[i:len(P) - 1] + \" found\")\n",
     "                indices = self.l_rank_c(O_start, O_stop, P[i-1])\n",
+    "                print(indices)\n",
+    "                \n",
+    "                if len(indices) == 0: \n",
+    "                    return False\n",
     "                \n",
     "                if i == 1 and len(indices)> 0: \n",
     "                    return True\n",
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 262,
    "id": "d0275210",
    "metadata": {},
    "outputs": [
@@ -188,18 +197,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ttcggaaata\n",
-      "10010101010101010101\n",
-      "01010010101011010101\n",
-      "['0\\t1', '1\\t2', '2\\t3', '3\\t4', '4\\t5', '5\\t6', '6\\t7', '7\\t8', '8\\t9', '9\\t10']\n",
-      "aaaacggttt\n",
-      "{'a': 0, 'c': 4, 'g': 5, 't': 7}\n",
-      "{'a': [0, 3], 'c': [4, 4], 'g': [5, 6], 't': [7, 10]}\n",
-      "[1, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
-      "[0, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
-      "[0, 2, 4, 5, 7, 9, 11, 14, 16, 18]\n",
-      "[1, 3, 6, 8, 10, 12, 13, 15, 17, 19]\n",
-      "7 10\n"
+      "$brrytwoawuoao_r__o\n",
+      "01010101010101001010101010101010101\n",
+      "01010010101010101010100101101010101\n",
+      "taob_\n",
+      "20 26\n",
+      "11 -1\n",
+      " found\n",
+      "[1]\n",
+      "14 34\n",
+      "8 17\n",
+      "o found\n",
+      "[1]\n",
+      "32 34\n",
+      "17 -1\n",
+      "wo found\n",
+      "[2]\n",
+      "6 34\n",
+      "4 17\n",
+      "_wo found\n",
+      "[0]\n"
      ]
     },
     {
@@ -209,10 +226,10 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-161-793436df7daa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-161-793436df7daa>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#     # Construct the WheelerGraphIndex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mwgi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWheelerGraphIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mO_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwgi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"gat\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m#     # Example query\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-151-456e3d6d7ed9>\u001b[0m in \u001b[0;36mbackward_search\u001b[0;34m(self, P)\u001b[0m\n\u001b[1;32m    110\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m             \u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_select_0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0mI_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_stop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_rank_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhigh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-151-456e3d6d7ed9>\u001b[0m in \u001b[0;36mi_select_0\u001b[0;34m(self, low, high)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0;31m# Get positions of 0's corresponding to the characters in F\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_zeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_zeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhigh\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mi_rank_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-262-9c5afb90d78b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-262-9c5afb90d78b>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mwgi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWheelerGraphIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mO_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_boat\"\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwgi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"row_your_boat\"\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;31m#     print(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;31m#     print(wgi.backward_search(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-241-b75f90d9cafb>\u001b[0m in \u001b[0;36mbackward_search\u001b[0;34m(self, P)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;31m#             print(start,stop)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m             \u001b[0mI_low\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_high\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_select_0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m \u001b[0;31m#             print(I_low, I_high)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0mI_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_stop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_rank_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI_low\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mI_high\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-241-b75f90d9cafb>\u001b[0m in \u001b[0;36mi_select_0\u001b[0;34m(self, low, high)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0;31m# Get positions of 0's corresponding to the characters in F\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_zeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_zeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhigh\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mi_rank_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -220,13 +237,17 @@
    "source": [
     "def main():\n",
     "    # Adjust filenames as needed\n",
-    "    L_file = \"./out__graph/L.txt\"       # contains the edge labels in order\n",
-    "    I_file = \"./out__graph/I.txt\"       # bitvector of incoming edges\n",
-    "    O_file = \"./out__graph/O.txt\"       # bitvector of outgoing edges\n",
-    "    nodes_file = r\"./out__graph/nodes.txt\"# node data (optional depending on use case)\n",
+    "    L_file = \"./out__rowboat/L.txt\"       # contains the edge labels in order\n",
+    "    I_file = \"./out__rowboat/I.txt\"       # bitvector of incoming edges\n",
+    "    O_file = \"./out__rowboat/O.txt\"       # bitvector of outgoing edges\n",
+    "    nodes_file = r\"./out__rowboat/nodes.txt\"# node data (optional depending on use case)\n",
+    "#     L_file = \"./out__DMPK/L.txt\"       # contains the edge labels in order\n",
+    "#     I_file = \"./out__DMPK/I.txt\"       # bitvector of incoming edges\n",
+    "#     O_file = \"./out__DMPK/O.txt\"       # bitvector of outgoing edges\n",
+    "#     nodes_file = r\"./out__DMPK/nodes.txt\"# node data (optional depending on use case)\n",
     "\n",
     "    # Load data\n",
-    "    L_str = load_L(L_file)\n",
+    "    L_str = \"$\" + load_L(L_file)\n",
     "    I_str = load_bitvector(I_file)\n",
     "    O_str = load_bitvector(O_file)\n",
     "    nodes = load_nodes(nodes_file)  # if needed\n",
@@ -234,21 +255,17 @@
     "    print(L_str)\n",
     "    print(I_str)\n",
     "    print(O_str)\n",
-    "    print(nodes)\n",
+    "#     print(nodes)\n",
     "\n",
     "#     # Construct the WheelerGraphIndex\n",
     "    wgi = WheelerGraphIndex(L_str, I_str, O_str)\n",
-    "    print(wgi.backward_search(\"gat\"))\n",
+    "    print(\"_boat\"[::-1])\n",
+    "    print(wgi.backward_search(\"row_your_boat\"[::-1]))\n",
+    "#     print(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1])\n",
+    "#     print(wgi.backward_search(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1]))\n",
     "\n",
-    "#     # Example query\n",
-    "#     P = \"ow\"  # or any pattern you want to search\n",
-    "#     low, high = wgi.backward_search(P)\n",
-    "\n",
-    "#     if low == -1:\n",
-    "#         print(f\"No occurrences of '{P}' found.\")\n",
-    "#     else:\n",
-    "#         match_edges = wgi.paths_for_range(low, high)\n",
-    "#         print(f\"Matches of '{P}': edges {match_edges}\")\n",
+    "#     print(\"CCCCCTAGGACCCCCACCCCCGACCCTCGCGAAAAAA\"[::-1])\n",
+    "#     print(wgi.backward_search(\"CCCCTAGGACCCCCACCCCCGACCCTCGCGAAA\"[::-1]))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
@@ -257,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a596abc9",
+   "id": "78f9ef62",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -265,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30023b9a",
+   "id": "30ff4bf8",
    "metadata": {},
    "outputs": [],
    "source": []
