--- a/QueryWheeler.ipynb
+++ b/QueryWheeler.ipynb
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "id": "d09107d0",
+   "execution_count": 276,
+   "id": "a26b2acc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        self.O = O\n",
     "        self.n = len(L)\n",
     "        self.F = \"\".join(sorted(L))\n",
-    "#         print(self.F)\n",
+    "        print(self.F)\n",
     "        \n",
     "        \n",
     "        # Build C array (like first in FM-index)\n",
@@ -72,7 +72,7 @@
     "                self.C[key].append(indices[i + 1] -1)\n",
     "            \n",
     "        \n",
-    "#         print(self.C)\n",
+    "        print(self.C)\n",
     "        \n",
     "        \n",
     "        def zeros_ones_helper(string): \n",
@@ -125,7 +125,7 @@
     "            elif self.O_zeros[i] == high - 1:\n",
     "                high_0 = i\n",
     "                break\n",
-    "       \n",
+    "        print(low_0)\n",
     "        return low_0, high_0\n",
     "    \n",
     "    def l_rank_c(self, low, high, char): \n",
@@ -158,12 +158,13 @@
     "            I_low, I_high = self.i_select_0(start,stop)\n",
     "#             print(I_low, I_high)\n",
     "            I_start, I_stop = self.i_rank_1(I_low,I_high)\n",
-    "#             print(I_start, I_stop)\n",
+    "            print(I_start, I_stop)\n",
+    "\n",
     "            if I_start > 0:\n",
     "                O_low,O_high = self.o_select_1(I_start -1, I_stop)\n",
     "            else: \n",
     "                print(\"error\")\n",
-    "                O_low,O_high = self.o_select_1(0, I_stop)\n",
+    "                O_low,O_high = self.o_select_1(-1, I_stop)\n",
     "            print(O_low, O_high)\n",
     "            O_start, O_stop = self.o_rank_0(O_low, O_high)\n",
     "            print(O_start, O_stop)\n",
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 277,
    "id": "d0275210",
    "metadata": {},
    "outputs": [
@@ -197,46 +198,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$brrytwoawuoao_r__o\n",
+      "brrytwoawuoao_r__o\n",
       "01010101010101001010101010101010101\n",
       "01010010101010101010100101101010101\n",
+      "___aaboooorrrtuwwy\n",
+      "{'_': [0, 2], 'a': [3, 4], 'b': [5, 5], 'o': [6, 9], 'r': [10, 12], 't': [13, 13], 'u': [14, 14], 'w': [15, 16], 'y': [17, 17]}\n",
       "taob_\n",
-      "20 26\n",
-      "11 -1\n",
+      "12 -1\n",
+      "25 34\n",
+      "-1\n",
+      "-1 17\n",
       " found\n",
-      "[1]\n",
-      "14 34\n",
-      "8 17\n",
-      "o found\n",
-      "[1]\n",
-      "32 34\n",
-      "17 -1\n",
-      "wo found\n",
-      "[2]\n",
-      "6 34\n",
-      "4 17\n",
-      "_wo found\n",
-      "[0]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-262-9c5afb90d78b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-262-9c5afb90d78b>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mwgi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWheelerGraphIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mO_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_boat\"\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwgi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"row_your_boat\"\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;31m#     print(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;31m#     print(wgi.backward_search(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-241-b75f90d9cafb>\u001b[0m in \u001b[0;36mbackward_search\u001b[0;34m(self, P)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;31m#             print(start,stop)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m             \u001b[0mI_low\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_high\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_select_0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m \u001b[0;31m#             print(I_low, I_high)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0mI_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI_stop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_rank_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI_low\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mI_high\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-241-b75f90d9cafb>\u001b[0m in \u001b[0;36mi_select_0\u001b[0;34m(self, low, high)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0;31m# Get positions of 0's corresponding to the characters in F\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_zeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_zeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhigh\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mi_rank_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "[0, 1]\n",
+      "3 4\n",
+      "6 10\n",
+      "4\n",
+      "4 5\n",
+      "a found\n",
+      "[]\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    # Adjust filenames as needed\n",
+    "    L_file = \"./out__graph/L.txt\"       # contains the edge labels in order\n",
+    "    I_file = \"./out__graph/I.txt\"       # bitvector of incoming edges\n",
+    "    O_file = \"./out__graph/O.txt\"       # bitvector of outgoing edges\n",
+    "    nodes_file = r\"./out__graph/nodes.txt\"# node data (optional depending on use case)\n",
+    "    \n",
     "    L_file = \"./out__rowboat/L.txt\"       # contains the edge labels in order\n",
     "    I_file = \"./out__rowboat/I.txt\"       # bitvector of incoming edges\n",
     "    O_file = \"./out__rowboat/O.txt\"       # bitvector of outgoing edges\n",
@@ -247,7 +238,7 @@
     "#     nodes_file = r\"./out__DMPK/nodes.txt\"# node data (optional depending on use case)\n",
     "\n",
     "    # Load data\n",
-    "    L_str = \"$\" + load_L(L_file)\n",
+    "    L_str = load_L(L_file)\n",
     "    I_str = load_bitvector(I_file)\n",
     "    O_str = load_bitvector(O_file)\n",
     "    nodes = load_nodes(nodes_file)  # if needed\n",
@@ -260,7 +251,7 @@
     "#     # Construct the WheelerGraphIndex\n",
     "    wgi = WheelerGraphIndex(L_str, I_str, O_str)\n",
     "    print(\"_boat\"[::-1])\n",
-    "    print(wgi.backward_search(\"row_your_boat\"[::-1]))\n",
+    "    print(wgi.backward_search(\"_boat\"))\n",
     "#     print(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1])\n",
     "#     print(wgi.backward_search(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1]))\n",
     "\n",
@@ -274,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f9ef62",
+   "id": "b54da2de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ff4bf8",
+   "id": "f0c86c44",
    "metadata": {},
    "outputs": [],
    "source": []
