--- a/QueryWheeler.ipynb
+++ b/QueryWheeler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 280,
    "id": "4e5a8be3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 327,
    "id": "a26b2acc",
    "metadata": {},
    "outputs": [],
@@ -89,10 +89,10 @@
     "        self.I_zeros, self.I_ones = zeros_ones_helper(self.I)\n",
     "        self.O_zeros, self.O_ones = zeros_ones_helper(self.O)\n",
     "        \n",
-    "#         print(self.I_zeros)\n",
-    "#         print(self.I_ones)\n",
-    "#         print(self.O_zeros)\n",
-    "#         print(self.O_ones)\n",
+    "        print(self.I_zeros)\n",
+    "        print(self.I_ones)\n",
+    "        print(self.O_zeros)\n",
+    "        print(self.O_ones)\n",
     "        \n",
     "    def i_select_0(self, low, high):\n",
     "        # Get positions of 0's corresponding to the characters in F\n",
@@ -108,11 +108,21 @@
     "                low_1 = i\n",
     "            elif self.I_ones[i] > high and self.I_ones[i] == high + 1:\n",
     "                high_1 = i\n",
-    "                break\n",
-    "       \n",
+    "                break      \n",
+    "        if low == high: \n",
+    "            return low_1, low_1\n",
+    "        \n",
     "        return low_1, high_1\n",
     "        \n",
     "    def o_select_1(self, low, high): \n",
+    "        if low == -1: \n",
+    "            return 0, self.O_ones[high]\n",
+    "        if high == -1: \n",
+    "            return self.O_ones[low], len(self.O) - 1\n",
+    "        \n",
+    "        if high - low == 1: \n",
+    "            return self.O_ones[low], self.O_ones[low]\n",
+    "        \n",
     "        return self.O_ones[low], self.O_ones[high]\n",
     "    \n",
     "    def o_rank_0(self, low, high):\n",
@@ -125,7 +135,9 @@
     "            elif self.O_zeros[i] == high - 1:\n",
     "                high_0 = i\n",
     "                break\n",
-    "        print(low_0)\n",
+    "                \n",
+    "        if low == high: \n",
+    "            return low_0, low_0\n",
     "        return low_0, high_0\n",
     "    \n",
     "    def l_rank_c(self, low, high, char): \n",
@@ -153,28 +165,28 @@
     "            elif len(indices) > 1:\n",
     "                start, stop = self.C[c][0] + indices[0], self.C[c][0] + indices[-1]\n",
     "                \n",
-    "#             print(start,stop)\n",
+    "            print(\"\\n C[c]: \" + str(start) + \", \" + str(stop))\n",
     "\n",
     "            I_low, I_high = self.i_select_0(start,stop)\n",
-    "#             print(I_low, I_high)\n",
+    "            print(\"i_select_0: \" + str(I_low) + \", \" + str(I_high))\n",
     "            I_start, I_stop = self.i_rank_1(I_low,I_high)\n",
-    "            print(I_start, I_stop)\n",
+    "            print(\"i_rank_1: \" + str(I_start) + \", \" + str( I_stop))\n",
     "\n",
     "            if I_start > 0:\n",
     "                O_low,O_high = self.o_select_1(I_start -1, I_stop)\n",
     "            else: \n",
     "                print(\"error\")\n",
     "                O_low,O_high = self.o_select_1(-1, I_stop)\n",
-    "            print(O_low, O_high)\n",
+    "            print(\"o_select_1: \" + str(O_low) + \", \" +  str(O_high))\n",
     "            O_start, O_stop = self.o_rank_0(O_low, O_high)\n",
-    "            print(O_start, O_stop)\n",
+    "            print(\"o_rank_0: \" + str(O_start) + \", \" + str(O_stop))\n",
     "\n",
     "            if i > 0:\n",
     "                if O_stop == -1:\n",
     "                    O_stop = O_start\n",
     "                print(P[i:len(P) - 1] + \" found\")\n",
     "                indices = self.l_rank_c(O_start, O_stop, P[i-1])\n",
-    "                print(indices)\n",
+    "                print(f\"{P[i-1]} indices: {indices}\")\n",
     "                \n",
     "                if len(indices) == 0: \n",
     "                    return False\n",
@@ -190,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 334,
    "id": "d0275210",
    "metadata": {},
    "outputs": [
@@ -198,24 +210,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "brrytwoawuoao_r__o\n",
-      "01010101010101001010101010101010101\n",
-      "01010010101010101010100101101010101\n",
-      "___aaboooorrrtuwwy\n",
-      "{'_': [0, 2], 'a': [3, 4], 'b': [5, 5], 'o': [6, 9], 'r': [10, 12], 't': [13, 13], 'u': [14, 14], 'w': [15, 16], 'y': [17, 17]}\n",
-      "taob_\n",
-      "12 -1\n",
-      "25 34\n",
-      "-1\n",
-      "-1 17\n",
+      "aaaacggttt\n",
+      "{'a': [0, 3], 'c': [4, 4], 'g': [5, 6], 't': [7, 9]}\n",
+      "[1, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+      "[0, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "[0, 2, 4, 5, 7, 9, 11, 14, 16, 18]\n",
+      "[1, 3, 6, 8, 10, 12, 13, 15, 17, 19]\n",
+      "\n",
+      " C[c]: 7, 9\n",
+      "i_select_0: 14, 18\n",
+      "i_rank_1: 7, 9\n",
+      "o_select_1: 13, 19\n",
+      "o_rank_0: 7, 9\n",
       " found\n",
-      "[0, 1]\n",
-      "3 4\n",
-      "6 10\n",
-      "4\n",
-      "4 5\n",
-      "a found\n",
-      "[]\n",
+      "t indices: [2]\n",
+      "\n",
+      " C[c]: 9, 9\n",
+      "i_select_0: 18, 18\n",
+      "i_rank_1: 9, 9\n",
+      "o_select_1: 17, 17\n",
+      "o_rank_0: 9, 9\n",
+      "t found\n",
+      "a indices: [3]\n",
+      "\n",
+      " C[c]: 3, 3\n",
+      "i_select_0: 6, 6\n",
+      "i_rank_1: 3, 3\n",
+      "o_select_1: 6, 6\n",
+      "o_rank_0: 4, 4\n",
+      "at found\n",
+      "g indices: [1]\n",
+      "\n",
+      " C[c]: 6, 6\n",
+      "i_select_0: 12, 12\n",
+      "i_rank_1: 6, 6\n",
+      "o_select_1: 12, 12\n",
+      "o_rank_0: -1, -1\n",
+      "gat found\n",
+      "a indices: []\n",
       "False\n"
      ]
     }
@@ -228,10 +260,11 @@
     "    O_file = \"./out__graph/O.txt\"       # bitvector of outgoing edges\n",
     "    nodes_file = r\"./out__graph/nodes.txt\"# node data (optional depending on use case)\n",
     "    \n",
-    "    L_file = \"./out__rowboat/L.txt\"       # contains the edge labels in order\n",
-    "    I_file = \"./out__rowboat/I.txt\"       # bitvector of incoming edges\n",
-    "    O_file = \"./out__rowboat/O.txt\"       # bitvector of outgoing edges\n",
-    "    nodes_file = r\"./out__rowboat/nodes.txt\"# node data (optional depending on use case)\n",
+    "#     L_file = \"./out__rowboat/L.txt\"       # contains the edge labels in order\n",
+    "#     I_file = \"./out__rowboat/I.txt\"       # bitvector of incoming edges\n",
+    "#     O_file = \"./out__rowboat/O.txt\"       # bitvector of outgoing edges\n",
+    "#     nodes_file = r\"./out__rowboat/nodes.txt\"# node data (optional depending on use case)\n",
+    "    \n",
     "#     L_file = \"./out__DMPK/L.txt\"       # contains the edge labels in order\n",
     "#     I_file = \"./out__DMPK/I.txt\"       # bitvector of incoming edges\n",
     "#     O_file = \"./out__DMPK/O.txt\"       # bitvector of outgoing edges\n",
@@ -243,20 +276,21 @@
     "    O_str = load_bitvector(O_file)\n",
     "    nodes = load_nodes(nodes_file)  # if needed\n",
     "    \n",
-    "    print(L_str)\n",
-    "    print(I_str)\n",
-    "    print(O_str)\n",
+    "#     print(L_str)\n",
+    "#     print(I_str)\n",
+    "#     print(O_str)\n",
     "#     print(nodes)\n",
     "\n",
     "#     # Construct the WheelerGraphIndex\n",
     "    wgi = WheelerGraphIndex(L_str, I_str, O_str)\n",
-    "    print(\"_boat\"[::-1])\n",
-    "    print(wgi.backward_search(\"_boat\"))\n",
+    "    print(wgi.backward_search(\"agatt\"))\n",
+    "#     print(\"_boat\"[::-1])\n",
+    "#     print(wgi.backward_search(\"_boat\"[::-1]))\n",
     "#     print(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1])\n",
     "#     print(wgi.backward_search(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1]))\n",
     "\n",
-    "#     print(\"CCCCCTAGGACCCCCACCCCCGACCCTCGCGAAAAAA\"[::-1])\n",
-    "#     print(wgi.backward_search(\"CCCCTAGGACCCCCACCCCCGACCCTCGCGAAA\"[::-1]))\n",
+    "#     print(\"CCTAGGACCCCCACCCCCGACCCTCGCGAAA\"[::-1])\n",
+    "#     print(wgi.backward_search(\"CCTAGGACCCCCACCCCCGACCCTCGCGAAA\"[::-1]))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
