cleaned code, ready for main

--- a/QueryWheeler.ipynb
+++ b/QueryWheeler.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 335,
    "id": "a26b2acc",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
     "        self.O = O\n",
     "        self.n = len(L)\n",
     "        self.F = \"\".join(sorted(L))\n",
-    "        print(self.F)\n",
+    "#         print(self.F)\n",
     "        \n",
     "        \n",
     "        # Build C array (like first in FM-index)\n",
@@ -72,7 +72,7 @@
     "                self.C[key].append(indices[i + 1] -1)\n",
     "            \n",
     "        \n",
-    "        print(self.C)\n",
+    "#         print(self.C)\n",
     "        \n",
     "        \n",
     "        def zeros_ones_helper(string): \n",
@@ -89,10 +89,10 @@
     "        self.I_zeros, self.I_ones = zeros_ones_helper(self.I)\n",
     "        self.O_zeros, self.O_ones = zeros_ones_helper(self.O)\n",
     "        \n",
-    "        print(self.I_zeros)\n",
-    "        print(self.I_ones)\n",
-    "        print(self.O_zeros)\n",
-    "        print(self.O_ones)\n",
+    "#         print(self.I_zeros)\n",
+    "#         print(self.I_ones)\n",
+    "#         print(self.O_zeros)\n",
+    "#         print(self.O_ones)\n",
     "        \n",
     "    def i_select_0(self, low, high):\n",
     "        # Get positions of 0's corresponding to the characters in F\n",
@@ -165,28 +165,27 @@
     "            elif len(indices) > 1:\n",
     "                start, stop = self.C[c][0] + indices[0], self.C[c][0] + indices[-1]\n",
     "                \n",
-    "            print(\"\\n C[c]: \" + str(start) + \", \" + str(stop))\n",
+    "#             print(\"\\n C[c]: \" + str(start) + \", \" + str(stop))\n",
     "\n",
     "            I_low, I_high = self.i_select_0(start,stop)\n",
-    "            print(\"i_select_0: \" + str(I_low) + \", \" + str(I_high))\n",
+    "#             print(\"i_select_0: \" + str(I_low) + \", \" + str(I_high))\n",
     "            I_start, I_stop = self.i_rank_1(I_low,I_high)\n",
-    "            print(\"i_rank_1: \" + str(I_start) + \", \" + str( I_stop))\n",
+    "#             print(\"i_rank_1: \" + str(I_start) + \", \" + str( I_stop))\n",
     "\n",
     "            if I_start > 0:\n",
     "                O_low,O_high = self.o_select_1(I_start -1, I_stop)\n",
     "            else: \n",
-    "                print(\"error\")\n",
     "                O_low,O_high = self.o_select_1(-1, I_stop)\n",
-    "            print(\"o_select_1: \" + str(O_low) + \", \" +  str(O_high))\n",
+    "#             print(\"o_select_1: \" + str(O_low) + \", \" +  str(O_high))\n",
     "            O_start, O_stop = self.o_rank_0(O_low, O_high)\n",
-    "            print(\"o_rank_0: \" + str(O_start) + \", \" + str(O_stop))\n",
+    "#             print(\"o_rank_0: \" + str(O_start) + \", \" + str(O_stop))\n",
     "\n",
     "            if i > 0:\n",
     "                if O_stop == -1:\n",
     "                    O_stop = O_start\n",
-    "                print(P[i:len(P) - 1] + \" found\")\n",
+    "#                 print(P[i:len(P) - 1] + \" found\")\n",
     "                indices = self.l_rank_c(O_start, O_stop, P[i-1])\n",
-    "                print(f\"{P[i-1]} indices: {indices}\")\n",
+    "#                 print(f\"{P[i-1]} indices: {indices}\")\n",
     "                \n",
     "                if len(indices) == 0: \n",
     "                    return False\n",
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 337,
    "id": "d0275210",
    "metadata": {},
    "outputs": [
@@ -210,45 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aaaacggttt\n",
-      "{'a': [0, 3], 'c': [4, 4], 'g': [5, 6], 't': [7, 9]}\n",
-      "[1, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
-      "[0, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
-      "[0, 2, 4, 5, 7, 9, 11, 14, 16, 18]\n",
-      "[1, 3, 6, 8, 10, 12, 13, 15, 17, 19]\n",
-      "\n",
-      " C[c]: 7, 9\n",
-      "i_select_0: 14, 18\n",
-      "i_rank_1: 7, 9\n",
-      "o_select_1: 13, 19\n",
-      "o_rank_0: 7, 9\n",
-      " found\n",
-      "t indices: [2]\n",
-      "\n",
-      " C[c]: 9, 9\n",
-      "i_select_0: 18, 18\n",
-      "i_rank_1: 9, 9\n",
-      "o_select_1: 17, 17\n",
-      "o_rank_0: 9, 9\n",
-      "t found\n",
-      "a indices: [3]\n",
-      "\n",
-      " C[c]: 3, 3\n",
-      "i_select_0: 6, 6\n",
-      "i_rank_1: 3, 3\n",
-      "o_select_1: 6, 6\n",
-      "o_rank_0: 4, 4\n",
-      "at found\n",
-      "g indices: [1]\n",
-      "\n",
-      " C[c]: 6, 6\n",
-      "i_select_0: 12, 12\n",
-      "i_rank_1: 6, 6\n",
-      "o_select_1: 12, 12\n",
-      "o_rank_0: -1, -1\n",
-      "gat found\n",
-      "a indices: []\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -258,23 +219,19 @@
     "    L_file = \"./out__graph/L.txt\"       # contains the edge labels in order\n",
     "    I_file = \"./out__graph/I.txt\"       # bitvector of incoming edges\n",
     "    O_file = \"./out__graph/O.txt\"       # bitvector of outgoing edges\n",
-    "    nodes_file = r\"./out__graph/nodes.txt\"# node data (optional depending on use case)\n",
     "    \n",
     "#     L_file = \"./out__rowboat/L.txt\"       # contains the edge labels in order\n",
     "#     I_file = \"./out__rowboat/I.txt\"       # bitvector of incoming edges\n",
     "#     O_file = \"./out__rowboat/O.txt\"       # bitvector of outgoing edges\n",
-    "#     nodes_file = r\"./out__rowboat/nodes.txt\"# node data (optional depending on use case)\n",
     "    \n",
     "#     L_file = \"./out__DMPK/L.txt\"       # contains the edge labels in order\n",
     "#     I_file = \"./out__DMPK/I.txt\"       # bitvector of incoming edges\n",
     "#     O_file = \"./out__DMPK/O.txt\"       # bitvector of outgoing edges\n",
-    "#     nodes_file = r\"./out__DMPK/nodes.txt\"# node data (optional depending on use case)\n",
     "\n",
     "    # Load data\n",
     "    L_str = load_L(L_file)\n",
     "    I_str = load_bitvector(I_file)\n",
     "    O_str = load_bitvector(O_file)\n",
-    "    nodes = load_nodes(nodes_file)  # if needed\n",
     "    \n",
     "#     print(L_str)\n",
     "#     print(I_str)\n",
@@ -283,7 +240,7 @@
     "\n",
     "#     # Construct the WheelerGraphIndex\n",
     "    wgi = WheelerGraphIndex(L_str, I_str, O_str)\n",
-    "    print(wgi.backward_search(\"agatt\"))\n",
+    "    print(wgi.backward_search(\"gatt\"))\n",
     "#     print(\"_boat\"[::-1])\n",
     "#     print(wgi.backward_search(\"_boat\"[::-1]))\n",
     "#     print(\"GCTCCCTCTCCTAGGACCCTCCCCCCAAAAG\"[::-1])\n",
